--- a/views/logins/mentorLogin.ejs
+++ b/views/logins/mentorLogin.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,14 +9,41 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/login.css">
-    <title>Student's Login</title>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+    <title>Mentor Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
-<body>
-    <div class="login-div">
-       
+
+<body class="d-flex flex-column">
+
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+            <a class="navbar-brand " href="/">Student's Projects management</a>
+            <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/studentLogin">Student's Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/adminLogin">Admin's Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/mentorLogin">Mentor's login</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    
+
+    <div class="container">
+        
         <div class="logo"></div>
-        <div class="title">Admin's Login</div>
+        <div class="title">Mentor's Login</div>
         <div class="fields">
             <div class="username">
                 <svg class="svg-icon" viewBox="0 0 20 20">
@@ -34,12 +62,19 @@
                 <input type="password" class="pass-input" placeholder="password">
             </div>
         </div>
-        <button class="signin-button">Login</button>
+        <button class="signin-button"><a href="/mentorHome">Login</a></button>
         <div class="link">
             <a href="#"> Forgot password ?</a> 
+            <div class="home"> <a href="/">Back to Home</a></div>
         </div>
-        <div class="home "> <a href="/">Back to Home</a></div>
     </div>
-    
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+
 </body>
+
 </html>
