--- a/views/projects/edit.ejs
+++ b/views/projects/edit.ejs
@@ -6,22 +6,109 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Project</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
 
 <body>
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Projects manager</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/home">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/home/new">Assign project</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Overview</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link btn btn-outline-danger" href="/" tabindex="-1" aria-disabled="true">Log out</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+   <div class="container ">
     <h1>Add Project</h1>
-    <form action="/home/<%= projectSearched._id %>?_method=PUT" method="POST">
-        <label for="roll">Roll Number</label>
-        <input type="text" id='roll' name='roll' placeholder="Roll Number" value="<%= projectSearched.roll %> ">
-        <label for="mentor">Mentor Name</label>
-        <input type="text" id='mentor' name='mentor' placeholder="Name" value="<%= projectSearched.mentor %> ">
-        <label for="title">Project Title</label>
-        <input type="text" id='title' name='title' placeholder="Project Title" value="<%= projectSearched.title %> ">
-        <label for="deadline">Deadline</label>
-        <input type="text" id='deadline' name='deadline' placeholder="dd-mm-yyyy" value="<%= projectSearched.deadline %> ">
-        <button>Submit</button>
+    <form action="/home/<%= projectSearched._id %>?_method=PUT" method="POST" novalidate class="validated-form">
+        <div class="edit col-3 " style="width:50%">
+            <div class="mb-3">
+                <label for="roll" class="form-label">Roll no</label>
+                <input type="text" class="form-control" id="roll" name="project[roll]" placeholder="" value="<%= projectSearched.roll %> " required>
+                <div class="valid-feedback">
+                  Looks good!
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="mentor" class="form-label">Mentor</label>
+                <input type="text" class="form-control" id="mentor" name="project[mentor]" value="<%= projectSearched.mentor %>"required>
+                <div class="valid-feedback">
+                  Looks good!
+                </div>
+              </div>
+              <!-- <div class="mb-3">
+                <label for="exampleFormControlInput3" class="form-label">Project title</label>
+                <input type="text" class="form-control" id="exampleFormControlInput3" value="<%= projectSearched.title %> ">
+              </div> -->
+              <div class="mb-3">
+                <label for="title" class="form-label">Project title</label>
+                <input class="form-control" id="title" rows="3" name="project[title]" required value="<%= projectSearched.title %>" > </input>
+                <div class="valid-feedback">
+                  Looks good!
+                </div>
+              </div>
+              <div class="mb-3">
+                <label for="deadline" class="form-label">Deadline</label>
+                <input type="text" class="form-control" id="deadline" name="project[deadline]" value="<%= projectSearched.deadline %>"required>
+                <div class="valid-feedback">
+                  Looks good!
+                </div>
+              </div>
+        
+              <button class="btn btn-success">Update</button>
+             
+         </div>
     </form>
-    <a href="/home/<%= projectSearched._id %>">Cancel</a>
+    <a href="/home/<%= projectSearched._id %>" class="btn btn-info my-3">Cancel</a>
+   </div>
+
+   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+   
+ 
 </body>
 
 </html>
+
+<script>
+  // Example starter JavaScript for disabling form submissions if there are invalid fields
+(function () {
+  'use strict'
+
+  // Fetch all the forms we want to apply custom Bootstrap validation styles to
+  const forms = document.querySelectorAll('.validated-form')
+
+  // Loop over them and prevent submission
+  Array.from(forms)
+    .forEach(function (form) {
+      form.addEventListener('submit', function (event) {
+        if (!form.checkValidity()) {
+          event.preventDefault()
+          event.stopPropagation()
+        }
+
+        form.classList.add('was-validated')
+      }, false)
+    })
+})()
+</script>
