--- a/views/projects/show.ejs
+++ b/views/projects/show.ejs
@@ -5,18 +5,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= foundProject.roll %> </title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <h1><%= foundProject.title %> </h1>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Projects manager</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/home">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/home/new">Assign project</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Overview</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link btn btn-outline-danger" href="/" tabindex="-1" aria-disabled="true">Log out</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+      
+          
+    <div class="container">
+        <!-- <h1><%= foundProject.title %> </h1>
     <ul>
         <li>Assigned to: <%= foundProject.roll %> </li>
         <li>Mentor: <%= foundProject.mentor %> </li>
         <li>Deadline: <%= foundProject.deadline %> </li>
     </ul>
-    <a href="/home">Full List</a>
+    <a href="/home">All projects</a>
     <a href="/home/<%= foundProject._id %>/edit ">Edit</a>
-    <form action="/home/<%= foundProject._id %>?_method=DELETE" method="post">
-        <button>Delete</button>
-    </form>
+     -->
+    
+    <div class="card-container ">
+       <div class="container my-3">
+        <div class="card my-3 " style="width: 100%;">
+           
+          <div class="card-body">
+            <h5 class="card-title"><%= foundProject.title %></h5>
+            <p class="card-text"></p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Assigned to: <%= foundProject.roll %></li>
+            <li class="list-group-item">Mentor: <%= foundProject.mentor %></li>
+              <li class="list-group-item">Deadline: <%= foundProject.deadline %></li>
+          </ul>
+          <div class="card-body">
+          
+            <a  href="/home/<%=foundProject._id %>/edit " class="card-link btn btn-info">edit</a>
+            <a href="#" class="card-link btn btn-info">Details</a>
+          </div>
+        </div>
+        <form action="/home/<%= foundProject._id %>?_method=DELETE" method="post">
+            <button class="btn btn-danger">Delete</button>
+        </form>
+        </div>
+       </div>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    
 </body>
 </html>
